<resources>
    <string name="app_name" translatable="false">Playlist maker</string>
    <string name="channel_name" translatable="false">Audio player service</string>
    <string name="channel_description" translatable="false">Service for playing music</string>
    <string name="search">Search</string>
    <string name="library">Media library</string>
    <string name="settings">Settings</string>
    <string name="theme">Dark theme</string>
    <string name="share">Share App</string>
    <string name="support">Write to support</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_message">Thank developers for a cool app!</string>
    <string name="support_title">Message to the Developers of the Playlist Maker App</string>
    <string name="chooser_title">Select application:</string>
    <string name="offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="email">margo.ivi@yandex.ru</string>
    <string name="update">Refresh</string>
    <string name="internet_error">Network problems\n\nDownload failed. Check\nyour internet connection</string>
    <string name="search_error">Nothing found</string>
    <string name="you_searched">You searched</string>
    <string name="clear_history">Clear history</string>
    <string name="duration">Duration</string>
    <string name="album">Album</string>
    <string name="year">Year</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="playing_error">No internet, unable to download track :(</string>
    <string name="your_library_is_empty">Your library is empty</string>
    <string name="new_playlist">New playlist</string>
    <string name="you_have_not_any_playlist">You have not created\nany playlist</string>
    <string name="favorite_tracks">Favorite Tracks</string>
    <string name="playlists">Playlists</string>
    <string name="label_library">LibraryFragment</string>
    <string name="label_search">SearchFragment</string>
    <string name="label_settings">SettingsFragment</string>
    <string name="label_player">audio_player_fragment</string>
    <string name="clear">clear request</string>
    <string name="still_loading">Still loading…</string>
    <string name="placeholder_image">placeholder_image</string>
    <string name="cover">cover</string>
    <string name="add_button">add_button</string>
    <string name="play_button">play_button</string>
    <string name="like_button">like_button</string>
    <string name="ic_share">Share</string>
    <string name="ic_support">ic_support</string>
    <string name="ic_arrow_forward">ic_arrow_forward</string>
    <string name="playlist_name">Name*</string>
    <string name="create">Create</string>
    <string name="playlist_description">Description</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="rationale_permission_message">Permission required to view gallery</string>
    <string name="permission_player_message">Permission required to play music in background</string>
    <string name="my_playlists">my_playlists</string>
    <string name="title_playlist_dialog">Finish creating a playlist?</string>
    <string name="message_playlist_dialog">All unsaved data will be lost</string>
    <string name="cancel">Cancel</string>
    <string name="complete">Complete</string>
    <string name="playlist">Playlist</string>
    <string name="created">created</string>
    <string name="added">added to playlist</string>
    <string name="already_added">The track has already been added to the playlist</string>
    <string name="ic_more">ic_more</string>
    <string name="delete_track">Do you want to delete this track?</string>
    <string name="delete_playlist">Do you want to delete playlist</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="nothing_added">You have not added any tracks yet</string>
    <string name="empty_track_list">This playlist has nothing to share</string>
    <string name="edit_Information">Edit information</string>
    <string name="delete">Delete playlist</string>
    <string name="edit_title">Edit</string>
    <string name="save_playlist">Save</string>
    <string name="changed">has changed</string>

    <plurals name="tracks">
        <item quantity="one">%1$d track</item>
        <item quantity="other">%1$d tracks</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%1$d minute</item>
        <item quantity="other">%1$d minutes</item>
    </plurals>

</resources>