<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/main_screen_background_color"
    android:padding="@dimen/padding_16dp">

    <TextView
        style="@style/YSMedium22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_42dp"
        android:orientation="vertical">

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/search_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/padding_16dp"
            android:text="@string/search"
            app:icon="@drawable/search"/>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/library_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/padding_16dp"
            android:text="@string/library"
            app:icon="@drawable/library"/>

        <Button
            style="@style/ButtonStyle"
            android:id="@+id/settings_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/padding_16dp"
            android:text="@string/settings"
            app:icon="@drawable/settings"/>
    </LinearLayout>
</LinearLayout>

