<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/general_background_color"
    android:orientation="vertical"
    tools:context=".library.ui.root_fragment.LibraryFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navigation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/YSMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library"
            android:textColor="?attr/toolbar_text_color" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/margin_16dp">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            style="@style/TabLayout_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorFullWidth="true"
            app:tabTextAppearance="@style/TabLayout_library"
            >

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/favorite_tracks"/>

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/playlists"/>

        </com.google.android.material.tabs.TabLayout>


        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</LinearLayout>