<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    tools:context=".library.ui.child_fragments.PlaylistsFragment">

    <Button
        android:id="@+id/new_playlist"
        style="@style/ButtonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_36dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginBottom="@dimen/margin_49dp"
        android:text="@string/new_playlist"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/placeholder_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/placeholder_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_109dp"
        android:src="@drawable/error_search"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/placeholder_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/placeholder_image"/>

    <TextView
        android:id="@+id/placeholder_message"
        style="@style/YSMedium19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20dp"
        android:text="@string/you_have_not_any_playlist"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholder_image" />

</androidx.constraintlayout.widget.ConstraintLayout>