<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/general_background_color"
    android:orientation="vertical"
    tools:context=".search.ui.fragment.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/navigation_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            style="@style/YSMedium22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="?attr/toolbar_text_color" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_10dp"

        android:background="@drawable/shape_edittext_search"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navigation_toolbar" >

        <ImageView
            android:layout_width="@dimen/dimen_16dp"
            android:layout_height="@dimen/dimen_16dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/margin_16dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search"
            app:tint="?attr/hint_icon_text_color"
            tools:ignore="ImageContrastCheck" />

        <EditText
            android:id="@+id/input_edit_text"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_5dp"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/search"
            android:minHeight="@dimen/min_height_edittext"
            android:textColor="?attr/expression_text_color"
            android:textColorHint="?attr/hint_icon_text_color"
            tools:ignore="Autofill,DuplicateSpeakableTextCheck,TextContrastCheck" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:contentDescription="@string/clear"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/you_searched"
        style="@style/YSMedium19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_50dp"

        android:text="@string/you_searched"
        android:visibility="visible"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_13dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

        app:layout_constrainedHeight="true"
        app:layout_constraintVertical_chainStyle="packed"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/you_searched"
        app:layout_constraintBottom_toTopOf="@id/clear_history"

        app:layout_constraintVertical_bias="0.0"
        app:layout_goneMarginTop="@dimen/margin_24dp"

        tools:listitem="@layout/item_view_track"
        tools:itemCount="100" />


    <Button
        android:id="@+id/clear_history"
        style="@style/SampleButton"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/min_height_btn_36dp"
        android:layout_marginTop="@dimen/margin_15dp"

        android:layout_marginBottom="@dimen/margin_15dp"
        android:text="@string/clear_history"

        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_list"

        tools:ignore="TouchTargetSizeCheck" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_148dp"
        android:indeterminate="true"
        android:indeterminateTint="?attr/progressbar_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container" />


    <ImageView
        android:id="@+id/placeholder_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_113dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/placeholder_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container"
        tools:src="@drawable/error_internet"
        android:contentDescription="@string/placeholder_image" />

    <TextView
        android:id="@+id/placeholder_message"
        style="@style/YSMedium19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_20dp"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/update_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholder_image"
        tools:text="@string/internet_error" />

    <Button
        android:id="@+id/update_button"
        style="@style/SampleButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/update"
        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/placeholder_message" />

</androidx.constraintlayout.widget.ConstraintLayout>