<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/general_background_color"
    tools:context=".playlist_creator.ui.fragment.PlaylistCreatorFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back">

        <TextView
            style="@style/YSMedium22"
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist"
            android:textColor="?attr/toolbar_text_color" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_cover_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_description_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.56" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_description_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_button_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />

    <ImageView
        android:id="@+id/ivPlaylistCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constrainedWidth="true"
        android:layout_marginStart="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_24dp"
        android:src="@drawable/placeholder_cover"
        android:contentDescription="@string/cover"

        app:layout_constraintBottom_toTopOf="@id/bottom_cover_guideline"
        app:layout_constraintDimensionRatio="р, 1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbNavigation" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_container"
        style="@style/PlaylistEditText"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_8dp"
        android:hint="@string/playlist_name"

        app:layout_constraintBottom_toTopOf="@id/playlist_description_container"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/top_description_guideline"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaylistName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_container"
        style="@style/PlaylistEditText"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:hint="@string/playlist_description"

        app:layout_constraintBottom_toBottomOf="@id/bottom_description_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_container">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPlaylistDescription"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton

        android:id="@+id/button_create"
        style="@style/MaterialButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/min_height_material_btn_50dp"
        android:layout_marginStart="@dimen/margin_17dp"
        android:layout_marginEnd="@dimen/margin_17dp"
        android:backgroundTint="@color/new_playlist_button_color"
        android:text="@string/create"

        app:layout_constraintBottom_toBottomOf="@id/bottom_button_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>